welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: 'case' expected but '(' found.
		(a,b,c) if (a == 2 && b==c && a==b) => return 10
                ^redTicket:4: error: '}' expected but ';' found.
		(a,b,c) if (a == b && b==c && a==c) => return 5
^redTicket:4: error: ';' expected but 'if' found.
		(a,b,c) if (a == b && b==c && a==c) => return 5
                        ^redTicket:5: error: ';' expected but 'if' found.
		(a,b,c) if (b != a && c != a) => return 1
                        ^redTicket:6: error: '}' expected but 'case' found.
		case _ => return 0
                ^redTicket:10: error: eof expected but '}' found.
 }
 ^