welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
	(a,b,c) match{
		(a,b,c) if (a == 2 && b==c && a==b) => return 10
		(a,b,c) if (a == b && b==c && a==c) => return 5
		(a,b,c) if (b != a && c != a) => return 1
		case _ => return 0
	}
}
